add example help texts

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@cismet-collab/ais-generic-texts": "^1.0.0",
     "@cismet-dev/react-cismap-rainhazardmaps": "~1.11.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
